???? 0.8.2
    
    user visible changes, admin:
    * Fixed wrong relative path created for create-links command.
    * Added time measurements to batch file produces for windows.
    * Removed redundant quotes from echo messages on windows.

3/2/2014 0.8.1 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Little faster sync/copy/syncopy due to optimiztions in SVNItem.
    * Fixed copy_dir_to_dir on Mac that did not create hard links
    * Fixed new_item_at_path that did not create the have map correctly

    user visible changes, admin:
    * new command: create-repo-rev-file, to separate repo rev file creation and uploading.
    * command up-repo-rev only uploads the already created repo rev file.
    * type fixed REPO_REV_FILE_VARS instead of REPO_REV_FILE_VARAIBLES

    programmer visible changes:
    * some rearranging of parser creation, and removed redundant members from CommandLineOptions
    * moved the discovery of info_map's file type to svnTree.py
    * added ConfigVar.resolved_num to help track which var is used in which command.
    * PlatformSpecificHelper's var_assign got new param: comment
    * Many optimizations to SVNItem code.
    * Using cStringIO instead of StringIO.
    * Test files for SVNTree test will be produced without comments, also changed the reference file.
    * added tests for test_platformSpecificHelper not finished yet.
    * copy_tool.copy_file_to_dir accepts bool for link_dest and should figure the destination.
    * info_map write files accept a comments param.
    * safe_makedirs will return the dir it made.

29/1/2014 0.8.0 Shai Shasag <shai@waves.com>

    Main 0.8.0 features:
    * Create and check signature for info_map.txt file

    user visible changes, client: